crates/privacy-pools-sdk-core/tests/ui/secret_order.stderr
error[E0369]: binary operation `<` cannot be applied to type `Secret`
 --> tests/ui/secret_order.rs:5:44
  |
5 |     let _ = Secret::new(U256::from(1_u64)) < Secret::new(U256::from(2_u64));
  |             ------------------------------ ^ ------------------------------ Secret
  |             |
  |             Secret
  |
note: `Secret` does not implement `PartialOrd`
 --> src/lib.rs
  |
  | pub struct Secret(Zeroizing<[u8; 32]>);
  | ^^^^^^^^^^^^^^^^^ `Secret` is defined in another crate

error[E0369]: binary operation `<` cannot be applied to type `Nullifier`
 --> tests/ui/secret_order.rs:6:47
  |
6 |     let _ = Nullifier::new(U256::from(1_u64)) < Nullifier::new(U256::from(2_u64));
  |             --------------------------------- ^ --------------------------------- Nullifier
  |             |
  |             Nullifier
  |
note: `Nullifier` does not implement `PartialOrd`
 --> src/lib.rs
  |
  | pub struct Nullifier(Zeroizing<[u8; 32]>);
  | ^^^^^^^^^^^^^^^^^^^^ `Nullifier` is defined in another crate
